// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> should render correctly 1`] = `
<div
  className="incident-notes-container-list"
>
  <div
    className="incident-notes-container-list__body"
  >
    <table
      cellPadding="0"
      cellSpacing="0"
      className="incident-notes-container-list__body-list"
    >
      <thead>
        <tr>
          <th
            className=""
          >
            Datum
          </th>
          <th
            className=""
          >
            Tijd
          </th>
          <th
            className=""
          >
            Notitie
          </th>
          <th
            className=""
          >
            Gebruiker
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          key="3"
        >
          <td>
            13-07-2018
          </td>
          <td>
            11:48
          </td>
          <td>
            Note 1
          </td>
          <td />
        </tr>
        <tr
          key="910"
        >
          <td>
            27-07-2018
          </td>
          <td>
            14:53
          </td>
          <td>
            Note 2
          </td>
          <td>
            opleiding@amsterdam.nl
          </td>
        </tr>
        <tr
          key="911"
        >
          <td>
            27-07-2018
          </td>
          <td>
            14:53
          </td>
          <td>
            Note 3
          </td>
          <td />
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<List /> should render without list correctly 1`] = `
<div
  className="incident-notes-container-list"
>
  <div
    className="incident-notes-container-list__body"
  >
    <table
      cellPadding="0"
      cellSpacing="0"
      className="incident-notes-container-list__body-list"
    >
      <thead>
        <tr>
          <th
            className=""
          >
            Datum
          </th>
          <th
            className=""
          >
            Tijd
          </th>
          <th
            className=""
          >
            Notitie
          </th>
          <th
            className=""
          >
            Gebruiker
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
